--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>helloworld</title>
+	<title>Fanfou</title>
 	<script src="/usr/palm/frameworks/mojo/mojo.js" type="text/javascript" x-mojo-version="1"></script> 
 	<script src="/usr/palm/frameworks/mojoloader.js" type="text/javascript"></script>
 
